Added all locations and price standards;
