# routes/company.routes.js
@@ -5,6 +5,7 @@ const router = express.Router();
 
 router.post('/companies/add', checkUserRole(['WORKER']),CompanyController.createCompany);
 router.get('/companies/getCompanies', CompanyController.getAllCompanies);
+router.get('/companies/locate/:from/:to', CompanyController.getCompaniesFromLocations);
 router.get('/companies/:id', CompanyController.getCompanyByID);
 router.delete('/companies/delete/:id', checkUserRole(['WORKER']), CompanyController.deleteCompanyByCompanyID);
 // ... other company routes
