# routes/location.routes.js
@@ -14,10 +14,16 @@ const stationController = require('../controllers/location.controller');
 // Get all locations
 router.get('/locations', stationController.getAllLocations);
 
+// Get location by ID
+router.get('/location/:id', stationController.getLocationByID);
+
+// Get prices standards from Locations
+router.get('/prices/:fromLocationID/:toLocationID', stationController.getPricesFromLocations);
+
 // Create a new location
 router.post('/locations/add', stationController.createLocation);
 
 // Delete a location by ID
-router.delete('/locations/:id', stationController.deleteLocationByID);
+router.delete('/locations/delete/:id', stationController.deleteLocationByID);
 
 module.exports = router;
